<resources>
    <string name="app_name">Orange Market</string>
    <string name="connect_error">Connetion Error</string>
    <string name="Error">"Error "</string>
    <string name="InvalidEror">Invalid Cridetalis\n</string>
    <string name="fragment_onboarding_next">NEXT</string>
    <string name="onboarding_title_0">Welcome to LokMart!\nGrocery Applications</string>
    <string name="onboarding_description_0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="onboarding_title_1">Best Quality and\nFast Delivery!</string>
    <string name="onboarding_description_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="onboarding_getstartet">GET STARTED</string>
    <string name="sing_in_account">Don’t have an account?</string>
    <string name="sing_up_text">Sign Up</string>
    <string name="sing_in_forget_password"><u>Forget Password?</u>></string>
    <string name="fragment_sing_in">Sign In</string>
    <string name="string_password">Password</string>
    <string name="string_username">User name</string>
    <string name="sign_in_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="sign_in_welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="sign_up_text">Already have account?</string>
    <string name="sign_up_chechbox_text">By tapping <b>“Sign Up”</b> you accept our </string>
    <string name="fragment_register">register</string>
    <string name="string_email">Email address</string>
    <string name="sign_up_title">Create your account</string>
    <string name="sign_up_pr">By tapping “Register” you accept our %s and %s </string>
    <string name="terms_of_use">terms of use</string>
    <string name="privacy_police">privacy police</string>
    <string name="already">User added before</string>
    <string name="home_good_morning">Good morning.</string>
    <string name="home_search">Search...</string>
    <string name="home_categories">Categories</string>
    <string name="home_show_all">Show all</string>
    <string name="home_d_items">%d Items</string>
    <string name="item_product_reting_count">%d Rating</string>
    <string name="fragment_product_discountd_off">%.1f%% OFF</string>
    <string name="home_error_loading">An Error Occurred</string>
    <string name="retry">Retry</string>
    <string name="home_greeting">Hello, %s</string>
    <string name="Item_category_count">%d Items</string>
    <string name="home_price"><strike>$%.1f</strike></string>
    <string name="price">%.1f $ </string>
    <string name="price_text"><strike>%s</strike></string>
    <string name="home_rating_start">%.1f</string>
    <string name="Search">Search</string>
    <string name="resent">Recent Search</string>
    <string name="clear_all">Clear All</string>
    <string name="SearchRes">Search Result</string>
    <string name="Fragment_filter_title">Filter Options</string>
    <string name="frgament_filter_reset">Reset</string>
    <string name="Fragment_filter_price_title">sort by PRIce range</string>
    <string name="Fragment_filter_rating_title">Sort by Rating</string>
    <string name="fragment_filter_one_two_starts">1 - 2 Stars</string>
    <string name="fragment_filter_two_thee_starts">2 - 3 Stars</string>
    <string name="fragment_filter_three_four_starts">3 - 4 Stars</string>
    <string name="fragment_filter_four_fife_starts">4 - 5 Stars</string>
    <string name="Fragment_filter_discount_title">Sort by discounts</string>
    <string name="fragment_filter_10_20">10 - 20%%</string>
    <string name="fragment_filter_25_50">20 - 50%%</string>
    <string name="fragment_filter_50_70">50 - 70%%</string>
    <string name="fragment_filter_70">70%% above</string>
    <string name="Fragment_filter_others_title">Sort by others</string>
    <string name="fragment_filter_discount">Discount</string>
    <string name="fragment_filter_free_shipping">Free Shipping</string>
    <string name="fragment_filter_voucher">Voucher</string>
    <string name="fragment_filter_same_day">Same Day Deli</string>
    <string name="Fragment_filter_category_title">Sort by categories</string>
    <string name="fragment_apple">apply filter</string>
    <string name="fragment_filter_category_error">Error fetching categories</string>
    <string name="free_delivery">FREE DELIVERY</string>
    <string name="product_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="related">Related product</string>
    <string name="add_to_cart">add to cart</string>
    <string name="detail_old_price"><strike>%.2f</strike></string>
    <string name="detail_product_reviews">%.1f (%d reviews)</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_orders">Orders</string>
    <string name="navigation_title_buy">Card</string>
    <string name="navigation_title_wishlist">Wishlist</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="wishlist_title">Wishlists</string>
    <string name="card_shoping">Shopping Cart\n</string>
    <string name="card_shopping">Shopping Cart</string>
    <string name="card_shopping_title">Shopping Cart</string>
    <string name="fragment_cart_title">Shopping Cart</string>
    <string name="cardbill_details">Bill Details</string>
    <string name="card_bill_details">Bill Details</string>
    <string name="card_item_total">Item Total</string>
    <string name="card_price">$ %.2f</string>
    <string name="card_price_plus">+ $ %.2f</string>
    <string name="card_price_minus">- $ %.2f</string>
    <string name="card_delivery">"Delivery Fee "</string>
    <string name="card_tax">Texes and Charge</string>
    <string name="card_orderTitle">Order Total</string>
    <string name="card_checkout">checkout</string>
    <string name="card_apply">Apply</string>
    <string name="card_promo_hind">Promo Code</string>
    <string name="fragment_cart_empty">Cart is empty</string>
    <string name="detail_add_cart">Item added to cart</string>
    <string name="card_billing_error">Error getting billing details</string>
    <string name="card_order_error">Error creating order</string>
    <string name="card_create">Order successfully created</string>
    <string name="fragment_orders_title">My Orders</string>
    <string name="item_order_id">Order id %d</string>
    <string name="order_count">%d Items</string>
    <string name="step_order_placed">Order Placed</string>
    <string name="step_cancelled">Order Cancelled</string>
    <string name="step_confirmed">Order Confirmed</string>
    <string name="step_delivered">Order delivered</string>
    <string name="step_delivering">Delivery Started</string>
    <string name="status_all">All</string>
    <string name="status_delivering">On Delivering</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="status_placed">Placed</string>
    <string name="fragment_orders_empty">No orders</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_delivery">Delivery</string>
    <string name="checkout_address">Address</string>
    <string name="checkout_payment">Payment</string>
    <string name="checkout_full_name">Full Name</string>
    <string name="checkout_full_name_a">Brayden Anderson</string>
    <string name="checkout_email_title">Email Address</string>
    <string name="checkout_full_name_e">braydenander@gmail.com</string>
    <string name="checkout_email">Enter your email address</string>
    <string name="checkout_name_hint">Enter you full name</string>
    <string name="checkout_email_hint">Enter you email address</string>
    <string name="checkout_phone_hint">Enter you phone number</string>
    <string name="checkout_phone_title">Phone Number</string>
    <string name="checkout_address_hint">Enter your home address</string>
    <string name="checkout_zip">Zip Code</string>
    <string name="checkout_zip_hint">Zip Code</string>
    <string name="checkout_city">City</string>
    <string name="checkout_country">Country</string>
    <string name="checkout_cyc">Choose your country</string>
    <string name="checkout_save">Save shipping address</string>
    <string name="pay_cads">Saved Cards</string>
    <string name="pay_add_card">Add Card</string>
    <string name="pay_cash_payment">Cash Payment</string>
    <string name="pay_make_payment">make payment</string>
    <string name="add_card">Add New Card</string>
    <string name="add_name">Card Holder Name</string>
    <string name="add_card_name">Enter you card name</string>
    <string name="add_number_card">Enter you card number</string>
    <string name="add_number_title">Card Number</string>
    <string name="add_data">Enter you MM/YY</string>
    <string name="add_cvv">CVV code</string>
    <string name="add_cart">ADD Cart</string>
    <string name="add_cvv_title">CVV</string>
    <string name="pay_error">Add your cart by clicking Add Cart</string>
    <string name="add_data_a">Month/Year</string>
    <string name="valid_thru">VALID THRU</string>
    <string name="nul" />
    <string name="fragment_cads_empty">Cards is empty</string>
</resources>